--- a/example/android/local.properties
+++ b/example/android/local.properties
@@ -1,3 +1,3 @@
-sdk.dir=C:\\Users\\jeffg\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\flutter\\flutter
+sdk.dir=/Users/gsyabruk/Library/Android/sdk
+flutter.sdk=/Users/gsyabruk/dev/flutter
 flutter.buildMode=debug
